--- a/css/style.css
+++ b/css/style.css
@@ -3,52 +3,81 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
+  background-color: #333;
 }
-
-.loading {
-  /* border: 1px solid red; */
-  width: 30px;
-  height: 30px;
+.container {
+  display: flex;
+}
+.square {
+  width: 400px;
+  height: 400px;
   position: relative;
+  margin: 40px;
 }
 
-.loading span {
+.square span {
   position: absolute;
-  width: 10px;
-  height: 10px;
-  background-color: gray;
-  top: 0;
-  left: 0;
-  animation: loading 2s infinite;
+  width: 100%;
+  height: 100%;
+  border: 1px solid white;
+  border-radius: 40% 60% 65% 35% / 40% 45% 55% 60%;
+  transition: 0.5s;
 }
-
-.loading span:nth-child(1) {
+.square span:nth-child(1) {
+  animation: circle 5s linear infinite;
+}
+.square span:nth-child(2) {
+  animation: circle 4s linear infinite;
+  animation-direction: reverse;
+}
+.square span:nth-child(3) {
+  animation: circle 10s linear infinite;
+}
+.square:nth-child(1):hover span {
   background-color: crimson;
+  border: none;
 }
-.loading span:nth-child(2) {
-  animation-delay: 1s;
+.square:nth-child(2):hover span {
+  background-color: dodgerblue;
+  border: none;
+}
+.square:nth-child(3):hover span {
+  background-color: yellowgreen;
+  border: none;
+}
+.square:hover span:nth-child(1) {
+  opacity: 0.3;
+}
+.square:hover span:nth-child(2) {
+  opacity: 0.5;
+}
+.square:hover span:nth-child(3) {
+  opacity: 0.8;
 }
 
-@keyframes loading {
-  0%,
+.square div {
+  /* border: 1px solid red; */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 70%;
+  text-align: center;
+  color: #fff;
+}
+
+.square div a {
+  color: #fff;
+  border: 1px solid white;
+  padding: 8px;
+  border-radius: 40% 60% 65% 35% / 40% 45% 55% 60%;
+}
+@keyframes circle {
+  0% {
+    transform: rotate(0);
+  }
+
   100% {
-    top: 0;
-    left: 0;
-  }
-  25% {
-    top: 0;
-    /* left: 100%; */
-    left: calc(100% - 10px);
-    background-color: dodgerblue;
-  }
-  50% {
-    top: calc(100% - 10px);
-    left: calc(100% - 10px);
-    background-color: orange;
-  }
-  75% {
-    top: calc(100% - 10px);
-    left: 0;
-    background-color: yellowgreen;
+    transform: rotate(360deg);
   }
 }
