--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-/* Google Web Font */
 @import url('https://fonts.googleapis.com/css?family=Raleway&display=swap');
 
 body {
@@ -7,54 +6,59 @@ body {
   line-height: 1.5em;
   font-weight: 300;
   margin: 0;
-  /* height: 100vh;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+.icon {
+  width: 125px;
+  height: 125px;
+  margin: 10px;
+  position: relative;
+}
+
+.icon span {
+  position: absolute;
+  background-color: #000;
+  color: #fff;
+  width: 300px;
+  text-align: center;
+  padding: 10px;
+  border-radius: 5px;
+  top: -80px;
+  left: 50%;
+  transform: translateX(-50%);
+  /* display: none; */
+  opacity: 0;
+  transition: 1s;
+  visibility: hidden;
+}
+
+.icon span:after {
+  content: '';
+  position: absolute;
+  background-color: black;
+  width: 10px;
+  height: 10px;
+  bottom: -5px;
+  left: 50%;
+  transform: rotate(45deg) translateX(-50%);
+}
+
+.icon:hover span {
+  /* display: block; */
+  opacity: 1;
+  visibility: visible;
+}
+
+/* height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center; */
-}
-
-.items {
-  text-align: center;
-}
-
-.item {
-  display: inline-block;
-  width: 300px;
-  height: 300px;
-  border: 1px solid #ddd;
-  position: relative;
-  margin: 10px;
-}
-
-.caption {
-  width: 300px;
-  height: 300px;
-  background-color: rgba(0, 0, 0, 0.521);
-  position: absolute;
-  top: 0;
-  left: 0;
-  color: #fff;
-  padding: 20px;
-  box-sizing: border-box;
-  padding-top: 40px;
-  opacity: 0;
-  transition: 0.5s;
-}
-
-.caption a {
-  color: #fff;
-  background-color: teal;
-  padding: 7px;
-  border-radius: 3px;
-}
-.caption a:hover {
-  background-color: #fff;
-  color: #000;
-}
-
-.item:hover .caption {
-  opacity: 1;
-}
 
 a {
   color: #222;
